--- a/index.html
+++ b/index.html
@@ -5,28 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Random color</title>
 </head>
 <body>
     <div class="col">
-        <h2>Text</h2>
-        <button>lock</button>
+        <h2></h2>
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open" data-type="lock"></i>
+        </button>
     </div>
     <div class="col">
-        <h2>Text</h2>
-        <button>lock</button>
+        <h2></h2>
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open" data-type="lock"></i>
+        </button>
     </div>
     <div class="col">
-        <h2>Text</h2>
-        <button>lock</button>
+        <h2></h2>
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open" data-type="lock"></i>
+        </button>
     </div>
     <div class="col">
-        <h2>Text</h2>
-        <button>lock</button>
+        <h2></h2>
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open" data-type="lock"></i>
+        </button>
     </div>
     <div class="col">
-        <h2>Text</h2>
-        <button>lock</button>
+        <h2></h2>
+        <button data-type="lock">
+            <i class="fa-solid fa-lock-open" data-type="lock"></i>
+        </button>
     </div>
     <script src="app.js"></script>
 </body>
